5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1635_2704.log
== SUBMITION (2019-04-14 20:56:37) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao (S/N) : ")
if (op.upper() == "S") :
	Y=(n * 0.1) + n
	print(y)
else :
	print(n)
-- EXECUTION TIME:
0.143816
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 5, in <module>
    print(y)
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:57:19) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
else :
	print(n)
-- EXECUTION TIME:
0.2233
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 5, in <module>
    print(y)
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:52:59) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
else :
	print(n)
-- EXECUTION TIME:
0.0340009
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:53:35) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.0283229
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:53:35) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.031841
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:53:36) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.0387759
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:53:44) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:54:46) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.032408
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:54:46) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.0312841
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:54:47) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.026005
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:54:47) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.033319
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:54:47) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.0286291
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:54:47) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.034714
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:54:47) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.025027
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:54:48) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.0279882
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:54:48) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.024096
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:06:14) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.189149
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 3, in <module>
    if (op.upper() == "S") :
NameError: name 'op' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:49:27) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.223538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 3, in <module>
    if (op.upper() == "S") :
NameError: name 'op' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:50:37) 
-- CODE:
n = float(input("nota do aluno: "))
b = input("bonificacao  (S/N) : ")
if (op.upper(b) == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.180834
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 3, in <module>
    if (op.upper(b) == "S") :
NameError: name 'op' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:51:12) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao  (S/N) : ")
if (op.upper(op) == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.224735
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 3, in <module>
    if (op.upper(op) == "S") :
TypeError: upper() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:51:26) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao  (S/N) : ")
if (upper(op) == "S") :
	Y = (n * 0.1) + n
	print(y)
	
else :
	print(n)
-- EXECUTION TIME:
0.180312
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 3, in <module>
    if (upper(op) == "S") :
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:53:14) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao  (S/N) : ")
if (upper(op) == "S") :
	Y = (n * 0.1) + n
	print(float(Y))
else :
	print(float(n))
-- EXECUTION TIME:
0.183078
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 3, in <module>
    if (upper(op) == "S") :
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:53:20) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao  (S/N) : ")
if (upper(op) == "S") :
	Y = (n * 0.1) + n
	print(float(Y))
else :
	print(float(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (upper(op) == "S") :
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:55:18) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao  (S/N) : ")
if (upper:(op) == "S") :
	Y = (n * 0.1) + n
	print(float(Y))
else :
	print(float(n))
-- EXECUTION TIME:
0.226971
-- ERROR:
  File "/home/codebench/codes/1635/2704/main.py", line 3
    if (upper:(op) == "S") :
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:56:50) 
-- CODE:
n = float(input("nota do aluno: "))
op = input("bonificacao  (S/N) : ")
if (op.upper() == "S") :
	Y = (n * 0.1) + n
	print(float(Y))
else :
	print(float(n))
-- EXECUTION TIME:
0.154528
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
